Closed Bug 109800 Opened 23 years ago Closed 22 years ago

nsIPasswordManager.idl doesn't allow you to manually add a site to the never saved list

Categories

(SeaMonkey :: Passwords & Permissions, defect)

defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: timeless, Assigned: Biesinger)

References

()

Details

(Keywords: topembed-)

Attachments

(1 file, 1 obsolete file)

 
Attached patch add interface and implementation (obsolete) — Splinter Review
Patch looks fine to me.  But you are adding an API and never calling it.  So 
that raises the following questions:

1. If it's not being called, why is it needed?  If you plan on calling it in the 
future, shouldn't that be the time that you add this API?  Or, at the very 
least, shouldn't you mention in this bug report why this API is going to be 
needed.

2. How can you test it out if it's not being called?
Yeah i intend to call it, but if i got struck down at this point i wasn't going
to dig into the chrome to add the text box and button that would consume it,
besides the patches are separately reviewable and kinda ask for different
reviewers (maybe).

Since you haven't objected, i'll try to attach the ui pair tonight after i munch.
Status: NEW → ASSIGNED
sorry, too complicated for tonight, the second half is now bug 109810.
Blocks: 109810
Component: Cookies → Password Manager
Keywords: review
Blocks: 130306
Comment on attachment 57527 [details] [diff] [review]
add interface and implementation

seems reasonable to me. in fact, the existing nsIPasswordManager api has a
"removeReject" w/ out a corresponding "addReject" which indeed seems deficient
from an API standpoint.
Attachment #57527 - Flags: review+
adding topembed+ to this since it blocks another topembed+ bug.

Keywords: topembed+
Attachment #57527 - Flags: superreview+
Comment on attachment 57527 [details] [diff] [review]
add interface and implementation

>+PUBLIC nsresult
>+SINGSIGN_AddReject(const char *host /*, const char *userName*/) {
>+  si_PutReject(host, nsAutoString(/*thisParameter_isObsolete*/), PR_TRUE);
>+#ifdef SOMEONE_WANTS_TO_KNOW_WHY_I_DID_THIS
>+  http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/extensions/wallet/src/singsign.cpp&rev=1.202&mark=1698#1650
>+#endif
>+  return NS_OK;
>+}

This kind of #ifdef is bogus, it's not even code inside it.
Please make this a comment instead

A doxygen comment in the idl file would be nice. I know the
current entries don't have them, but the patch in the blocked
bug does. when both this and 130306 lands your new API won't
have a comment like the others.

with those comment changes, sr=dveditz
Please hold off on this.  The interface was supposedly frozen last march 
(although the @frozen was inadvertently not added to the file).  Since then 
another routine has crept into it (findPasswordEntry) and, as you know, we have 
been asked to remove it (bug 130305 and bug 130317)
these bugs don't seem relevant, could you provide more detail
Sorry, I meant to say bug 130306 (not 130305) above.
after more thinking/talking/emailing/discussing... reverting to topembed- here.
I don't think this should be a blocker for 130306. Although this method
complementing seems good, it breaks symmetry with similair ifaces
(nsICookieManager for example). There aren't any consumers of this, and the
other bug this blocks is marked as an enhancement and futured.

timeless, can we remove 130306 from the blocking list?
Keywords: topembed+topembed-
Attachment #57527 - Attachment is obsolete: true
Comment on attachment 76438 [details] [diff] [review]
idl comments, fixed ifdef

marking r=valeski sr=dveditz
Attachment #76438 - Flags: superreview+
Attachment #76438 - Flags: review+
taking bug for checking in when it has approval
Assignee: timeless → cbiesinger
Status: ASSIGNED → NEW
Comment on attachment 76438 [details] [diff] [review]
idl comments, fixed ifdef

a=roc+moz
Attachment #76438 - Flags: approval+
Why don't you add the frozen line as part of this checkin?
checked in

morse, I'll leave adding that line to timeless as part of bug 130306
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
verified
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: