bug 109800 r=valesky sr=dveditz a=roc+moz nsIPasswordManager.idl doesn't allow you to manually add a site to the never saved list